kube-lego-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2018-01-19T13:04:15Z
  generation: 1
  labels:
    app: kube-lego
    chart: kube-lego-0.1.12
    heritage: Tiller
    release: ornery-porcupine
  name: ornery-porcupine-kube-lego
  namespace: default
  resourceVersion: "42580"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/ornery-porcupine-kube-lego
  uid: 406e8d8a-fd19-11e7-973a-000d3aa388a2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-lego
      release: ornery-porcupine
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kube-lego
        release: ornery-porcupine
    spec:
      containers:
      - env:
        - name: LEGO_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: LEGO_POD_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        - name: LEGO_EMAIL
          value: admin@manitestdomain.com
        - name: LEGO_PORT
          value: "8080"
        - name: LEGO_URL
          value: https://acme-v01.api.letsencrypt.org/directory
          # value: https://acme-staging.api.letsencrypt.org/directory
        image: jetstack/kube-lego:0.1.4
        imagePullPolicy: IfNotPresent
        name: kube-lego
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-01-19T13:04:15Z
    lastUpdateTime: 2018-01-19T13:04:15Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
