kibana.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: logging
    id: kibana-logging
  name: kibana-logging
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5601
  selector:
    app: logging
    id: kibana-logging
