visage-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: visage-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # Add to generate certificates for this ingress
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
    - host: visage.manitestdomain.com
      http:
        paths:
          - backend:
              serviceName: visage-svc
              servicePort: 80
            path: /
  tls:
    # With this configuration kube-lego will generate a secret in namespace foo called `example-tls`
    # for the URL `www.example.com`
    - hosts:
        - "visage.manitestdomain.com"
      secretName: manitestdomain-tls
